--- a/gb/21/9/16/n13237666.md
+++ b/gb/21/9/16/n13237666.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pgapbd397/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pgapbd397/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/pgapbd397/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pgapbd397/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/pgapbd397/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pgapbd397/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/pgapbd397/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pgapbd397/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/pgapbd397/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pgapbd397/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/pgapbd397/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pgapbd397/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/pgapbd397/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pgapbd397/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/pgapbd397/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pgapbd397/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/pgapbd397/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pgapbd397/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/pgapbd397/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pgapbd397/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pgapbd397/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pgapbd397/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pgapbd397/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pgapbd397/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中原大学通识教育落实SDGs精神  全国各大学先锋</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13237669-517121-600x400.jpg" />
 <h6>LINE_ALBUM_中原大学通识教育落实SDGs精神。（中原大学提供）
 </h6>
 <hr>
-<p>【大纪元2021年09月16日讯】（大纪元记者徐乃义台湾桃园报导）有鉴于气候变迁、社会平权、贫富差距等全球永续发展问题日趋严重，<ahref="https://github.com/pgapbd397/djy/blob/master/gb/tag/%E4%B8%AD%E5%8E%9F%E5%A4%A7%E5%AD%A6.md#1">中原大学</a>近日特别依据联合国发布之“2030永续发展目标”(SDGs)盘点全校通识课程，发现近乎百分之百课程都符合SDGs精神。中原大学身为全国<ahref="https://github.com/pgapbd397/djy/blob/master/gb/tag/%E9%80%9A%E8%AF%86%E6%95%99%E8%82%B2.md#1">通识教育</a>领头羊，以“天、人、物、我”课程架构具体实践SDGs精神，并持续强化相关课程与活动，让通识教育成为推展全球永续发展之重要力量！</p>
-<figure id="13237670" aria-describedby="caption-13237670" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/09/id13237670-517122-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/09/id13237670-517122-450x338.jpg" alt="中原大学通识课程“生态工程与艺术的对话”，师生参访青塘园。" width="500" /></a><figcaption id="caption-13237670" class="wp-caption-text"><ahref="https://github.com/pgapbd397/djy/blob/master/gb/tag/%E4%B8%AD%E5%8E%9F%E5%A4%A7%E5%AD%A6.md#1">中原大学</a>通识课程“生态工程与艺术的对话”，师生参访青塘园。（中原大学提供）</figcaption></figure>
-<p>中原大学以“全人教育”为核心理念，多元丰富的通识课程及活动，一向是台湾高等教育学习的标竿，并曾获第一届“典范通识学校奖”。中原<ahref="https://github.com/pgapbd397/djy/blob/master/gb/tag/%E9%80%9A%E8%AF%86%E6%95%99%E8%82%B2.md#1">通识教育</a>中心主任阎亢宗指出，大自然的反扑冲击各国，永续发展议题获得关注，中原大学通识教育所追求的“全人”与联合国17项永续发展目标(Sustainable Development Goals, SDGs)不谋而合，例如：消除贫穷、性别平等、永续城市与社区、保育生态、多元伙伴关系等，早已接轨国际。</p>
+<p>【大纪元2021年09月16日讯】（大纪元记者徐乃义台湾桃园报导）有鉴于气候变迁、社会平权、贫富差距等全球永续发展问题日趋严重，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%8E%9F%E5%A4%A7%E5%AD%A6.md#1">中原大学</a>近日特别依据联合国发布之“2030永续发展目标”(SDGs)盘点全校通识课程，发现近乎百分之百课程都符合SDGs精神。中原大学身为全国<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%80%9A%E8%AF%86%E6%95%99%E8%82%B2.md#1">通识教育</a>领头羊，以“天、人、物、我”课程架构具体实践SDGs精神，并持续强化相关课程与活动，让通识教育成为推展全球永续发展之重要力量！</p>
+<figure id="13237670" aria-describedby="caption-13237670" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/09/id13237670-517122-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/09/id13237670-517122-450x338.jpg" alt="中原大学通识课程“生态工程与艺术的对话”，师生参访青塘园。" width="500" /></a><figcaption id="caption-13237670" class="wp-caption-text"><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%8E%9F%E5%A4%A7%E5%AD%A6.md#1">中原大学</a>通识课程“生态工程与艺术的对话”，师生参访青塘园。（中原大学提供）</figcaption></figure>
+<p>中原大学以“全人教育”为核心理念，多元丰富的通识课程及活动，一向是台湾高等教育学习的标竿，并曾获第一届“典范通识学校奖”。中原<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%80%9A%E8%AF%86%E6%95%99%E8%82%B2.md#1">通识教育</a>中心主任阎亢宗指出，大自然的反扑冲击各国，永续发展议题获得关注，中原大学通识教育所追求的“全人”与联合国17项永续发展目标(Sustainable Development Goals, SDGs)不谋而合，例如：消除贫穷、性别平等、永续城市与社区、保育生态、多元伙伴关系等，早已接轨国际。</p>
 <figure id="13237671" aria-describedby="caption-13237671" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/09/id13237671-517123-450x337.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/09/id13237671-517123-450x337.jpg" alt="中原大学向鸿全老师(图中)之“在地叙事探究”通识课，参访淡水八里云门舞集练舞场。" width="500" /></a><figcaption id="caption-13237671" class="wp-caption-text">中原大学向鸿全老师(图中)之“在地叙事探究”通识课，参访淡水八里云门舞集练舞场。（中原大学提供）</figcaption></figure>
 <p>阎亢宗进一步指出，要实践联合国永续发展目标(SDGs)，很重要的精神就是“行动”，Knowledge to Action (K2A)是重要的步骤，而中原通识除了在课堂传授知识，也引导学生落实于行动，达到知行合一。例如，石柏冈与魏立心两位老师共同开授的“生态工程与艺术的对话”课程，以跨领域“对话”方式授课，并带领同学实际参访青塘园、老街溪河岸公园、南崁溪河岸湿地等场所，探讨生态关怀与平衡等议题。石柏冈表示，此课程从“环境伦理”观点出发，除了教导学生保护环境的工程方法，并引导学生思考人与环境间应以何种态度共存。</p>
 <figure id="13237672" aria-describedby="caption-13237672" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/09/id13237672-517124-450x301.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/09/id13237672-517124-450x301.jpg" alt="中原大学“桃园学”课程学生关心外籍移工，在报告中呈现他们观察到的文化落差问题。" width="500" /></a><figcaption id="caption-13237672" class="wp-caption-text">中原大学“桃园学”课程学生关心外籍移工，在报告中呈现他们观察到的文化落差问题。（中原大学提供）</figcaption></figure>
@@ -23,47 +23,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pgapbd397/djy/blob/master/gb/13/6/13/n3893236.md#1">中原大学与20所高中签订策略联盟</a></li>
-<li><a href="https://github.com/pgapbd397/djy/blob/master/gb/13/9/26/n3973043.md#1">帮老师“马杀鸡”中原学生“快闪”献惊喜</a></li>
-<li><a href="https://github.com/pgapbd397/djy/blob/master/gb/20/12/21/n12634711.md#1">让学生成为“桃园人”  中原大学“桃园学”</a></li>
-<li><a href="https://github.com/pgapbd397/djy/blob/master/gb/21/1/19/n12697127.md#1">桃园中原大学创意春联挥毫  横批“中原第一”</a></li>
-<li><a href="https://github.com/pgapbd397/djy/blob/master/gb/21/8/25/n13185750.md#1">中原大学携手  培育新世代数位光学科技人才</a></li>
-<li><a href="https://github.com/pgapbd397/djy/blob/master/gb/21/8/30/n13196542.md#1">中原大学论文被引用指标  CNCI高居全国第五</a></li>
-<li><a href="https://github.com/pgapbd397/djy/blob/master/gb/21/9/9/n13220995.md#1">中原大学首创“毕业生职涯发展问责报告书”</a></li>
-<li><a href="https://github.com/pgapbd397/djy/blob/master/gb/21/9/16/n13237662.md#1">桃园医院110年病人安全周活动</a></li>
-<li><a href="https://github.com/pgapbd397/djy/blob/master/gb/21/9/15/n13235292.md#1">人安桃园平安站中秋前夕发送平安包</a></li>
-<li><a href="https://github.com/pgapbd397/djy/blob/master/gb/21/9/15/n13235463.md#1">万安防疫版放警报不管制 桃园警全力宣导</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/6/13/n3893236.md#1">中原大学与20所高中签订策略联盟</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/26/n3973043.md#1">帮老师“马杀鸡”中原学生“快闪”献惊喜</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/21/n12634711.md#1">让学生成为“桃园人”  中原大学“桃园学”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/1/19/n12697127.md#1">桃园中原大学创意春联挥毫  横批“中原第一”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/25/n13185750.md#1">中原大学携手  培育新世代数位光学科技人才</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/30/n13196542.md#1">中原大学论文被引用指标  CNCI高居全国第五</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/9/n13220995.md#1">中原大学首创“毕业生职涯发展问责报告书”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753380.md#1">桃园野放一级保育类绿蠵龟重返大海</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753192.md#1">大义灭亲 通缉犯端午返家 家人通知警方逮捕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753276.md#1">手摇饮Uber Eats“来点好食在”买1送1</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9782273.md#1" target="_blank">高天韵：锡盖特博物馆 唤醒罗马尼亚的记忆</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/27/n10812825.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（4）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208894.md#1">【未解之谜】预言新解 激光雷达揭秘玛雅世界</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208933.md#1">北洋女学教授转生三世容貌相同 写书讲果报</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/8/26/n13188418.md#1">古籍记载：瘟疫出现之前 疫鬼做标记</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220351.md#1">【秦鹏直播】武汉病毒所被曝曾改造蝙蝠病毒</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220267.md#1">【有冇搞错】阿富汗自古就产恐怖主义</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/9/n13220621.md#1">移美港人：目睹香港法治崩坏 不适合小孩成长</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216420.md#1">赵薇再遭官媒点名 20年资本布局曝光</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217017.md#1">【拍案惊奇】赵薇卷入习江斗？传李嘉诚公子或出事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217379.md#1">美军绝密无人机疑现身南海 为何无可匹敌</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217860.md#1">回顾赵薇当年有多红 网友挖出孙俪曾给她伴舞</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218036.md#1">被指来自天王嫂训练营 郭富城妻哽咽首谈内情</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219236.md#1">台网红486账号遭停权 脸书回应：涉及仇恨言论</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220155.md#1">黄秋生自曝已抵台隔离 三个字评铁皮屋获大赞</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13215985.md#1">因台独言论遭FB禁言 台网红怒：文革蔓延到台湾</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216262.md#1">空姐考考你：飞机上禁烟 为何设有烟灰缸？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218742.md#1">获救孤儿小象回野外 多年后带小孩去看恩人</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217337.md#1">台爆幼儿园群聚感染 3类儿童新冠重症风险高</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216037.md#1">澳洲琴鸟模仿婴儿哭声 如原音重现</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/4/n13210459.md#1">古人怎么洁牙护齿？牙刷是怎么来的？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752388.md#1">【财商天下】美欧看上 台湾会脱孤？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pgapbd397/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pgapbd397/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/16/n13237666.htm">中原大学通识教育落实SDGs精神  全国各大学先锋</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/16/n13237666.htm">中原大学通识教育落实SDGs精神  全国各大学先锋</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pgapbd397/djy/blob/master/gb/21/9/16/n13237666.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pgapbd397/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pgapbd397/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pgapbd397/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pgapbd397/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgapbd397/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/9/16/n13237666.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
